# kernelOptimisationSIMD

./: CMakeLists.txt  README.md
benchmarks/: gaussian_blur_benchmark.cpp
include/: gaussian_blur.h
src/: image_utils.cpp  main.cpp  naive_gaussian_blur.cpp  simd_gaussian_blur.cpp
